[package]
name = "one-wire-bus"
version = "0.1.1"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/fuchsnj/one-wire-bus"
edition = "2018"
keywords = ["embedded", "onewire", "embedded-hal-driver", "1wire"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust implementation of the 1-Wire protocol for embedded-hal
"""

[dependencies]
embedded-hal = {version = "1.0.0-rc.1"}
critical-section = "1.1.2"

[dependencies.embassy-time]
version = "0.1.5"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "unstable-traits"]
